--- a/static/css/main-xx.css
+++ b/static/css/main-xx.css
@@ -20,6 +20,9 @@ img {
   width:100%;
   position: relative;
 }
+.xx_gallery_box img{
+	max-height: 200px;
+}
 /*gallery ends*/
 
 .xx_search{
@@ -29,9 +32,10 @@ img {
 	margin-bottom: 1em;
 }
 .xx_type_item_box{
-	background-color: lightblue;
+	background-color: rgba(51,51,51,1);
 	padding: 1em;
 	border-radius: 3px;
+	color:#fff;
 }
 .detail-h3{
 	text-align: center;
@@ -48,5 +52,13 @@ img {
 }
 .xx_list_item_right{
 	padding-left: 1em;
+}
+.xx_list_item_title{
+	display: inline-block;
+	width: 200px;
+	/*标题过长时用省略号代替*/
+	text-overflow:ellipsis;
+	white-space:nowrap;
+    overflow:hidden;
 }
 /*list ends*/
