--- a/css/main.css
+++ b/css/main.css
@@ -1,86 +1,79 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
+
 @font-face {
-font-family: 'Source-Han-Light';
-src: url('font/Source-Han-Light.eot');
-src: url('font/Source-Han-Light.eot?#iefix') format('embedded-opentype'),
-     url('font/Source-Han-Light.woff') format('woff'),
-     url('font/Source-Han-Light.ttf') format('truetype'),
-     url('font/Source-Han-Light.svg#Source-Han-Light') format('svg');
-    font-weight: normal;
-    font-style: normal;
-   }
-html, body {
+  font-family: 'Source-Han-Light';
+  src: url('font/Source-Han-Light.eot');
+  src: url('font/Source-Han-Light.eot?#iefix') format('embedded-opentype'), url('font/Source-Han-Light.woff') format('woff'), url('font/Source-Han-Light.ttf') format('truetype'), url('font/Source-Han-Light.svg#Source-Han-Light') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+html,
+body {
   position: relative;
   width: 100%;
 }
 
-html {
+body {
   background-color: #f5faff;
-  font-size: 0;
   height: 100%;
   overflow-x: hidden;
 }
-body {
-  overflow: hidden;
-}
-a{
-  text-decoration:none;
-  color:#333;
+
+a {
+  text-decoration: none;
+  color: #333;
   display: inline-block;
 }
 
-
-h1, h2, h3, p,textarea {
+h1,
+h2,
+h3,
+p,
+textarea {
   letter-spacing: 0.05em;
   line-height: 125%;
   font-family: Source-Han-Light, sans-serif;
-}
-p{
-  line-height: 120%;
-  color: #444;
   text-align: center;
+}
+
+p {
+  line-height: 120%;
+  text-align: center;
+  font-size: 14px;
 }
 
 h1 {
-  font-weight: 300;
-  color: #222;
+  font-weight: 400;
+  font-size: 28px;
 }
 
 h2 {
-  text-align: center;
-  font-weight: 300;
-  color: #222;
-  z-index: 1;
+  font-weight: 400;
 }
 
 h3 {
-  font-size: 4vw;
+  font-size: 18px;
   padding-left: 1vw;
   padding-right: 1vw;
-  font-weight: 300;
 }
 
 section {
   padding-top: 4vw;
   padding-bottom: 4vw;
   position: relative;
-  display: block;
 }
 
 
-
-
-
-
 /*navigation start*/
+
 nav {
-  /*padding: 1vw;*/
-  padding-top:1vw; 
+  padding-top: 1vw;
   padding-bottom: 1vw;
-  background-color: rgba(0,0,0,0.7);
+  background-color: rgba(0, 0, 0, 0.7);
   position: fixed;
   text-align: center;
   z-index: 2;
@@ -89,9 +82,7 @@ nav {
   top: 0;
 }
 
-
 nav a {
-  
   padding-top: 0 !important;
   padding-bottom: 0 !important;
   display: inline-block;
@@ -99,30 +90,73 @@ nav a {
   text-decoration: none;
   text-transform: uppercase;
   border-left: 1px solid #575e68;
-  border-left: 1px solid #575e68;
+  width: 20%;
+  box-sizing: border-box;
 }
+
+nav a:first-child {
+  border-left: none;
+}
+
 
 /*navigation ends*/
 
+
 /*cover begin*/
+
 .cover {
   height: 100vh;
   box-sizing: border-box;
   z-index: 3;
+  position: relative;
 }
-.btn{
+
+.cover .logo {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.cover .title {
+  font-size: 36px;
+  position: absolute;
+  top: 48%;
+  left: 50%;
+  color: #f5faff;
+  transform: translate(-50%, -50%);
+}
+
+.cover .sub-title {
+  color: #f5faff;
+  position: absolute;
+  left: 50%;
+  top: 55%;
+  -ms-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 100%;
+}
+
+.cover .btn-group {
+  position: absolute;
+  bottom: 10vh;
+  width: 100%;
+}
+
+.btn {
   display: inline-block;
   width: 12vw;
-  padding:15px 0px;
+  padding: 15px 0px;
   border-radius: 5px;
   text-align: center;
 }
-.download{
-  background-color: rgba(0,0,244,0.3);
-}
-.cover .download{
+
+.cover .download {
+  background-color: rgba(0, 0, 244, 0.3);
   color: #f5faff;
-  display:inline-block;
+  display: inline-block;
   position: absolute;
   left: 40%;
   top: 55%;
@@ -130,12 +164,14 @@ nav a {
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
-.cover .download:hover{
-  background-color: rgba(0,0,244,0.5);
+
+.cover .download:hover {
+  background-color: rgba(0, 0, 244, 0.5);
 }
-.cover .more{
-  display:inline-block;
-  border: 2px solid rgba(0,0,244,0.3);
+
+.cover .more {
+  display: inline-block;
+  border: 2px solid rgba(0, 0, 244, 0.3);
   position: absolute;
   left: 60%;
   top: 55%;
@@ -144,61 +180,38 @@ nav a {
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
-.cover .more:hover{
-  border-color: rgba(0,0,244,0.5);
+
+.cover .more:hover {
+  border-color: rgba(0, 0, 244, 0.5);
 }
-.cover p{
-  color: #f5faff;
-  display:inline-block;
-  position: absolute;
-  left: 50%;
-  top: 36%;
-  -ms-transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-.cover h1 {
-  -ms-transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  padding: 5vw;
-  line-height: 75%;
-  color: #f5faff;
-  display: inline-block;
-  position: absolute;
-  left: 50%;
-  top: 30%;
-}
-.cover #logo{
-  display: inline-block;
-}
-.cover #top-download{
-  display: inline-block;
-  float: right;
-}
+
 
 /*cover ends*/
 
 .content {
   z-index: 1;
   width: 100%;
-  margin: 0 auto;
-  /*border: 1px solid red;*/
-}
-.content:nth-child(odd){
-  background-color: rgb(247,247,247);
-}
-.content .section-box{
+  padding: 0 10px;
+  overflow: hidden;
   box-sizing: border-box;
-  display: inline-block;
-  width: 100%;
-  /*border: 1px solid green;*/
 }
-.content .section-box h1{
+
+.content:nth-child(odd) {
+  background-color: #f0f0f0;
+}
+
+.content .section-box {
+  box-sizing: border-box;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.content .section-box h1 {
   text-align: center;
-  margin-bottom: 3vh;
+  padding-bottom: 20px;
 }
-.content .section-box h3{
+
+.content .section-box h3 {
   text-align: center;
 }
 
@@ -209,248 +222,194 @@ nav a {
   width: 100%;
   height: auto;
 }
+
 .content div img:hover {
   opacity: 1;
 }
 
-#section-two .gn-box{
-  margin: 20px;
+#section-one .section-box ul {
+  list-style: circle inside;
 }
 
-#section-two .gn-box img{
-  width: 120px;
+#section-one .section-box ul li {
+  padding: 8px 16px;
+}
+
+#section-two .gn-box img {
+  width: 100px;
   height: 100px;
   margin: 0 auto;
 }
-#section-two .gn-box p{
+
+#section-two .gn-box p {
   text-align: center;
+  padding: 10px;
 }
-#section-two .gn-box-wrapper{
-  /*border: 1px solid #333;*/
-  display:-webkit-flex;
-  display:-moz-flex;
-  display:flex;
-  display:-ms-flexbox;
-  justify-content:space-around;
-  /*如果 flex-wrap 设置为 wrap，在一个伸缩行容不下所有伸缩项目时，伸缩项目会换行到一条新增的伸缩行上。新增的伸缩行根据侧轴的方向添加。*/
-  flex-wrap:wrap;
-  box-align:center;
-}
-#section-three{
-  margin-bottom: 100px;
-}
-#section-three .contact-box-wrapper{
+
+#section-two .gn-box-wrapper {
+  display: -webkit-flex;
+  display: -moz-flex;
   display: flex;
-  justify-content:center;
-  /*border: 1px solid #333;*/
-}
-#section-three .contact-box{
-  width: 40px;
-  height: 40px;
-  margin-left: 40px;
-  margin-right: 40px;
-  display:-webkit-flex;
-  display:-moz-flex;
-  display:flex;
-  display:-ms-flexbox;
-  flex-direction:row;
-  align-items:center;
+  display: -ms-flexbox;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-#section-four .user-evaluate-box{
-  margin: 20px auto;
+#section-three {
+  margin-bottom: 20px;
+}
+
+#section-three .contact-box {
+  width: 100%;
+  height: 36px;
+}
+
+#section-four .user-evaluate-box {
+  margin-bottom: 20px;
   overflow: hidden;
-  width: 720px;
 }
 
-.footer{
+.footer {
   height: 10vh;
-  background-color: rgb(34,39,44);
+  background-color: rgb(34, 39, 44);
   text-align: center;
-  
-}
-.footer p{
-  color: #fff;
+  color: #ccc;
   line-height: 10vh;
-  font-size: 16px;
-}
-.footer a{
-  color: #fff;
 }
 
-@media all and (min-width: 720px){
+.footer .email {
+  color: #f1f1f1;
+}
+
+@media all and (min-width: 720px) {
   p {
-    font-size: 1.5vw;
+    font-size: 14px;
     margin-top: 2vw;
     margin-bottom: 2vw;
   }
-  h1 {
-    font-size: 4vw;
-  }
-  h2 {
-    font-size: 2vw;
-    line-height: 200%;
-  }
-  h3 {
-    font-size: 1.5vw;
-  }
   nav {
     padding: 1vw;
+    font-size: 0;
   }
   nav a {
     padding: 1vw;
-    font-size: 6vw;
+    font-size: 18px;
   }
-  .cover{
+  .cover {
     background-image: url(../img/bg.png);
   }
   .cover h1 {
     padding: 60px;
   }
-  #section-two .gn-box{
+  .content .section-box {
+    width: 800px;
+    margin: 0 auto;
+  }
+  .content:last-child {
+    margin-bottom: 100px;
+  }
+  #section-two .gn-box {
     width: 20%;
     height: 300px;
     margin: 20px;
-    display:-webkit-flex;
-    display:-moz-flex;
-    display:flex;
-    display:-ms-flexbox;
-    flex-direction:column;
-    justify-content:center;
-}
-  #section-three .contact-box{
-    width: 5vw;
-    height: 5vh;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+    display: -ms-flexbox;
+    flex-direction: column;
+    justify-content: center;
   }
-  .user-name{
-    font-size: 1vw;
+  #section-three {
+    visibility: hidden;
   }
-  .footer{
+  .footer {
     height: 8vh;
     display: flex;
-    flex-direction:column;
-    flex-wrap:wrap;
-    justify-content:space-around;
-    align-items:center;
-  }
-  .footer p{
-    font-size: 1vw;
-    line-height: 100%;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
   }
 }
 
+
 /*移动设备开始*/
-@media all and (max-width: 720px){
-  .content{
-    width: 100%;
-  }
-  .section-box{
-    width: 90%;
-  }
+
+@media all and (max-width: 720px) {
   p {
-    font-size: 4vw;
     line-height: 150%;
+    padding: 5px;
   }
-  h1 {
-    font-size: 8vw;
-  }
-  h2 {
-    font-size: 6vw;
-  }
-  h3 {
-    font-size: 4vw;
-  }
-  
   nav {
-    padding: 10px;
+    font-size: 0;
+    padding: 10px 0;
   }
   nav a {
     margin-top: 1vw;
     margin-bottom: 1vw;
-    padding: 2vw;
-    font-size: 5vw;
   }
   .cover h1 {
     position: absolute;
     left: 50%;
     top: 26%;
   }
-  .btn{
+  .btn {
     width: 36vw;
-    padding:10px 0px;
+    padding: 10px 0px;
   }
-  .cover{
-    background-image: url(../img/bg.png); 
-    background-image: url(../img/bg.webp); 
+  .cover {
+    background-image: url(../img/bg.png);
+    background-image: url(../img/bg.webp);
   }
-  .cover .download{
+  .cover .download {
     position: absolute;
     left: 30%;
     top: 55%;
   }
-  .cover .download:hover{
-    background-color: rgba(0,0,244,0.5);
+  .cover .download:hover {
+    background-color: rgba(0, 0, 244, 0.5);
   }
-  .cover .more{
+  .cover .more {
     position: absolute;
     left: 70%;
     top: 55%;
     padding: 8px 0;
   }
-  #section-two{
-    width: 90%;
+  .section-box .sub-title {
+    display: none;
   }
-  #section-two .gn-box{
+  .gn-box {
     width: 100%;
-    height: 200px;
-    display:-webkit-flex;
-    display:-moz-flex;
-    display:flex;
-    display:-ms-flexbox;
-    flex-direction:column;
-    justify-content:center;
-    /*align-items:center;*/
-    /*border: 1px solid red;*/
-  }
-  /*#section-two .gn-box h2,#section-two .gn-box p,#section-two .gn-box img{
-    border: 1px solid blue;
-  }*/
-  #section-two .gn-box h2{
-    margin: 2vh 0;
-  }
-   #section-three .contact-box{
-    width: 8vw;
-    height: 8vw;
-
-  }
-  #section-four .user-evaluate-box{
+    height: 180px;
     margin: 20px auto;
-    overflow: hidden;
-    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
-  .user-name{
-    font-size: 3vw;
+  .gn-box h2 {
+    padding: 5px 0;
   }
-  .footer{
+  .footer {
     height: 12vh;
     display: flex;
-    flex-direction:column;
-    flex-wrap:wrap;
-    justify-content:center;
-    align-items:center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
   }
-  .footer p{
-    font-size: 3vw;
+  .footer p {
     line-height: 3vh;
   }
 }
+
+
 /*移动设备结束*/
 
-.watch-video{
-  color: rgba(0,0,244,0.3);
+.watch-video {
+  color: rgba(0, 0, 244, 0.3);
   line-height: 300%;
 }
-.watch-video:hover{
+
+.watch-video:hover {
   color: #333;
 }
-
